# sanctum-ata-sdk

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  pda.rs
core/src/instructions/: create.rs  internal_utils.rs  mod.rs
jiminy/: Cargo.toml
jiminy/src/: lib.rs  pda.rs
jiminy/src/instructions/: create.rs  mod.rs
tests/solana-comp/: Cargo.toml
tests/test-programs/create-idempotent-test/: Cargo.toml
tests/test-programs/create-idempotent-test/src/: lib.rs
tests/test-programs/create-idempotent-test/tests/: test.rs
tests/test-programs/create-test/: Cargo.toml
tests/test-programs/create-test/src/: lib.rs
tests/test-programs/create-test/tests/: test.rs
tests/test-utils/: Cargo.toml
tests/test-utils/src/: assert_tx.rs  conv.rs  lib.rs  pda.rs  proptest.rs  token.rs
