[workspace]
resolver = "2"

members = [
    "core",
    "jiminy",
    "tests/test-programs/*",
    "tests/test-utils", 
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
# In general, keep default-features = false in workspace
# and enable individual features in indiv crates
# Dont really care as much for dev deps
const-crypto = { version = "^0.3", default-features = false }
generic-array-struct = { version = "^0.3.1", default-features = false }

# jiminy crates
jiminy-cpi = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master" }
jiminy-entrypoint = { git = "https://github.com/igneous-labs/jiminy.git", branch = "master" }

# dev deps
proptest = { version = "^1" }

# solana crates (for dev)
mollusk-svm = "^0.4"
mollusk-svm-programs-token = { version = "^0.4", default-features = false, features = ["associated-token", "token"] }
solana-account = "^2"
solana-logger = "^2"
solana-pubkey = "^2"
spl-associated-token-account = { version = "^6", default-features = false, features = ["no-entrypoint"] }
spl-token = { version = "^8", default-features = false, features = ["no-entrypoint"] }

# workspace members
sanctum-ata-core = { path = "core" }
sanctum-ata-jiminy = { path = "jiminy" }
sanctum-ata-test-utils = { path = "./tests/test-utils" }
