[package]
name = "create-test"
edition.workspace = true
version.workspace = true
publish = false

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy-entrypoint = { workspace = true }
jiminy-cpi = { workspace = true }
sanctum-ata-jiminy = { workspace = true }

[dev-dependencies]
mollusk-svm = { workspace = true }
mollusk-svm-programs-token = { workspace = true }
sanctum-ata-test-utils = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
spl-token = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dev-dependencies]
proptest = { workspace = true }
